# cat-shell

./: CMakeLists.txt  LICENSE  README.md
docs/: architect.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  server.cpp
src/server/executor/: environment.cpp  environment.h  executor.cpp  executor.h
src/server/parser/: context.cpp  context.h
test/: CMakeLists.txt  server_test.cpp
